add dockerfile sample